# tinyalsa

./: .gitignore  .travis.yml  Android.bp  Android.mk  BUILD  CMakeLists.txt  Makefile  NOTICE  OWNERS  README.md  README.plugins.md  WORKSPACE  meson.build  meson_options.txt  mixer.c  pcm-2.c  pcm.c  tinycap.c  tinyhostless.c  tinymix.c  tinypcminfo.c  tinyplay.c  tinyrawplay.c  tinywavinfo.c  version.py
debian/: changelog  control  copyright  libtinyalsa-dev.dirs.in  libtinyalsa-dev.install.in  libtinyalsa.dirs.in  libtinyalsa.install.in  rules  tinyalsa.install
doxygen/: Doxyfile  Makefile  mainpage.h
examples/: CMakeLists.txt  Makefile  meson.build  pcm-readi.c  pcm-writei.c  separate.c  separate_7.c  tinycap.c  wake.c
examples/plugins/: Android.bp  sample_mixer_plugin.c  sample_pcm_plugin.c
examples/sndcardparser/: Android.bp  sample_sndcardparser.c
include/salsa/: pcm.h
include/sound/: asound.h
include/tinyalsa/: asoundlib.h  attributes.h  interval.h  meson.build  mixer.h  mixer_plugin.h  pcm.h  pcm_plugin.h  plugin.h  version.h
jni/: Android.mk
scripts/: travis-build.sh  version-bump.sh  version.sh
src/: Makefile  mixer.c  mixer_hw.c  mixer_io.h  mixer_plugin.c  pcm.c  pcm_hw.c  pcm_io.h  pcm_plugin.c  snd_card_plugin.c  snd_utils.c  snd_utils.h
tests/include/: pcm_test_device.h
tests/src/: mixer_test.cc  pcm_in_test.cc  pcm_loopback_test.cc  pcm_out_test.cc  pcm_params_test.cc  pcm_test.cc
utils/: Makefile  meson.build  tinycap.1  tinycap.c  tinymix.1  tinymix.c  tinypcminfo.1  tinypcminfo.c  tinyplay.1  tinyplay.c  tinywavinfo.1  tinywavinfo.c
